# ai-client

./: .env.example  .gitignore  AGENT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.agents/skills/page-pattern/: SKILL.md
.claude/skills/: page-pattern
design/: ai-client-openpencil.fig
docs/: architecture.md
eslint-rules/: one-react-component-per-file.js
src/: App.tsx  AppInner.tsx  api.ts  config.ts  main.tsx  styles.css  styles.scss  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BookCard.tsx  BookDetail.tsx  BookDetailView.tsx  BookSummaryCard.tsx  ChaptersCard.tsx  ConfigView.tsx  DropZone.tsx  ExportSection.tsx  FeedCard.tsx  ImagesCard.tsx  JobsView.tsx  MainContent.tsx  NewsFeed.tsx  PromptsView.tsx  Sidebar.tsx  SourcesModal.tsx  TranslateSection.tsx  UploadOverlay.tsx  newsUtils.ts
src/components/ConfigsView/: index.tsx
src/components/DropZone/: DropZone.module.scss  index.tsx
src/components/JobsView/: JobCard.tsx  JobsView.module.scss  index.tsx
src/components/MainView/: MainView.module.scss  index.tsx
src/components/PromptView/: PromptView.module.scss  index.tsx  (+1 more)
src/hooks/: useBooks.ts  useWebSocket.ts
src/pages/: BookDetailPage.tsx  ConfigNewPage.tsx  ConfigPage.tsx  ConfigViewPage.tsx  JobsPage.tsx  LibraryPage.tsx  NewsPage.tsx  PromptNewPage.tsx  PromptViewPage.tsx  PromptsList.tsx
src/test/: api.test.ts  config.test.ts  setup.ts
(+28 files in other folders)
